fix: profile shadow cutoff

--- a/src/screens/Mentor/profile.module.scss
+++ b/src/screens/Mentor/profile.module.scss
@@ -51,6 +51,8 @@
 
 .rightColumn {
   overflow-x: hidden;
+  margin: -0.5rem;
+  padding: 0.5rem;
 
   & > h3 {
     margin-top: 0;
